RequirementMachine: Tweak rule limit non-termination heuristic

Add the length of the longest *initial* rule to the rule length limit
before comparing.

Fixes https://bugs.swift.org/browse/SR-16024.